apps/staging/wallabag/wallabag-ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: wallabag-ingress
  namespace: wallabag
spec:
  ingressClassName: traefik
  rules:
    - host: wallabag.uclab8.net
      http:
        paths:
          - backend:
              service:
                name: wallabag
                port:
                  number: 8083
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wallabag.uclab8.net
      secretName: wallabag-ingress-staging-tls
